@@ -33,3 +33,4 @@
   27-Jun-2021  - V0.41 Add annotation of neighbor interactions to cofactor activity selections
   30-Jun-2021  - V0.42 Add reload() public methods to feature and cofactor provider modules
    1-Jul-2021  - V0.43 Adjustment linting rules to preserve unreferenced internal methods
+   2-Jul-2021  - V0.44 Add the remaining subset of the antibody data from SAbDab and add taxonomy filtering for CARD features
